package com.cn.common.core.model;
option java_package="com.cn.common.core.model.proto";
option java_outer_classname = "ResponseProto" ;

//数据
message Body{
	required bytes data = 1 ;
}
//包头
message Head{
	optional int32 HEADER_FLAG = 1 [default = 21415431];
	required ModuleType module = 2 [default = CHAT];
	required CmdType cmd = 3 [default = PUBLIC_CHAT];
}
//模块类型
enum ModuleType{
	PLAYER = 1;
	CHAT = 2 ;
}
//命令类型
enum CmdType{
	PUBLIC_CHAT = 11;
	PRIVATE_CHAT = 12 ;
	REGISTER_AND_LOGIN = 21;
	LOGIN = 22;
	PUSHCHAT = 101;
}
message Req{
	required Head head = 1;
	required Body body = 2;
}
//登录
message Login{
	required string resultCode = 1;
	optional string token = 2;
}
//注册
message Register{
	required string resultCode = 1;
	optional string token = 2;
}
//发送消息
message Message{
	required string resultCode = 1;
	required string msg = 2;
	optional string fromUser = 3;
	optional string group = 4;
}